[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/bubble.png" type="Texture" id=1]
[ext_resource path="res://Bubble.gd" type="Script" id=2]
[ext_resource path="res://wind_2d.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/speed = 8.0
shader_param/minStrength = 0.0
shader_param/maxStrength = 1.0
shader_param/strengthScale = 100.0
shader_param/interval = 3.5
shader_param/detail = 1.0
shader_param/distortion = 0.7
shader_param/heightOffset = 0.7

[sub_resource type="CircleShape2D" id=1]
radius = 20.0849

[node name="Bubble" type="RigidBody2D"]
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.38419e-06, 0.140309 )
scale = Vector2( 1.96812, 1.98215 )

[connection signal="body_entered" from="." to="." method="_on_Bubble_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
